--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,19 +33,19 @@ jobs:
         run: go build -v terraform-provider-virtualbox/...
 
       - name: Run go vet
-        run: go vet terraform-provider-virtualbox/...
+        run: go vet ./...
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run staticcheck
-        run: staticcheck terraform-provider-virtualbox/...
+        run: staticcheck ./...
 
       - name: Install golint
         run: go install golang.org/x/lint/golint@latest
 
       - name: Run golint
-        run: golint terraform-provider-virtualbox/...
+        run: golint ./...
 
       - name: Run tests
         run: go test -race -vet=off terraform-provider-virtualbox/...
