maybe it will work..

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
 
       - name: Build
-        run: go build -v terraform-provider-virtualbox/...
+        run: go build -v ./...
 
       - name: Run go vet
         run: go vet ./...
@@ -48,4 +48,4 @@ jobs:
         run: golint ./...
 
       - name: Run tests
-        run: go test -race -vet=off terraform-provider-virtualbox/...
+        run: go test -race -vet=off ./...
