--- a/terraform-provider-virtualbox/Makefile
+++ b/terraform-provider-virtualbox/Makefile
@@ -8,6 +8,10 @@ windows_build: set_log
 	go build -o terraform-provider-virtualbox.exe
 	cp terraform-provider-virtualbox.exe  ~\AppData\Roaming\terraform.d\plugins\terraform-virtualbox.local\virtualboxprovider\virtualbox\1.0.0\windows_386
 
+linux_build: set_log
+	go build -o terraform-provider-virtualbox
+	cp terraform-provider-virtualbox ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/virtualbox/1.0.0/linux_amd64
+
 set_log:
 	export TF_LOG=TRACE
 	export TF_LOG_PATH="./config/log.txt"
