--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.21'
+          go-version: '1.21.1'
           check-latest: true
 
 
@@ -38,8 +38,8 @@ jobs:
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
-      #- name: Run staticcheck  commented out before using the image unpacking
-      #  run: staticcheck ./...
+      - name: Run staticcheck  commented out before using the image unpacking
+        run: staticcheck ./...
 
       - name: Install golint
         run: go install golang.org/x/lint/golint@latest
