--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,8 @@ jobs:
         run: go vet ./...
 
       - name: Install VirtualBox
-        run: sudo apt-get install virtualbox
+        run: sudo apt update && sudo apt full-upgrade -y
+             sudo apt-get install virtualbox
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
