--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
   audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: '1.21.1'
           check-latest: true
@@ -36,8 +36,7 @@ jobs:
         run: go vet ./...
 
       - name: Install VirtualBox
-        run: sudo apt update && sudo apt full-upgrade -y
-             sudo apt-get install virtualbox
+        run: sudo apt-get install virtualbox
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
