--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -8,6 +8,11 @@ jobs:
   context:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go
+          uses: actions/setup-go@v3
+          with:
+            go-version: '1.21.1'
+            check-latest: true
       - name: Run Terratest
         uses: cloudposse/github-action-terratest@main
         with:
