--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
       - name: Run golint
         run: golint ./...
 
-      - name: Run tests
-        run: go test -race -vet=off ./internal/provider
+      #- name: Run tests
+      #  run: go test -race -vet=off ./internal/provider
 
-      
+      - name: Run terratests
+        run: go test -race -vet=off ./terraform-unit-testing
