--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
         run: golint ./...
 
       - name: Run tests
-        run: go test -race -vet=off ./...
+        run: go test -race -vet=off ./internal/provider
