--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -1,31 +1,23 @@
-name: Run Go Unit Tests
-on:
-  pull_request:
-    branches: [ "main" ]
-permissions: { }
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  TF_IN_AUTOMATION: true
+name: Unit Tests
+on: push
 jobs:
   go-tests:
-    permissions:
-      contents: read
-      actions: write
-    name: Run Go Unit Tests
+    name: Run Terratest Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
-      - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
+      - uses: actions/checkout@v1
+      - uses: actions/setup-go@v1
         with:
           go-version: 1.21
-      - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
+      - uses: autero1/action-terraform@v0.1.0
         with:
           terraform_version: ~1.3
-          terraform_wrapper: false
       - name: Download Go Modules
         working-directory: terraform-unit-testing
         run: go mod download
-      - name: Run Go Tests
+      - name: Run Go Test1
         working-directory: terraform-unit-testing
-        run: go test -v
+        run: go test -v vpc_test.go -tags=unit
+      - name: Run Go Test2
+        working-directory: terraform-unit-testing
+        run: go test -v vm_test.go -tags=unit
