--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -9,9 +9,10 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: 1.21
-      - uses: autero1/action-terraform@v0.1.0
+      - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
         with:
           terraform_version: ~1.3
+          terraform_wrapper: false
       - name: Download Go Modules
         working-directory: terraform-unit-testing
         run: go mod download
