--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -6,13 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: JosiahSiegel/action-connect-ovpn@v2.0.2
       - uses: actions/setup-go@v1
         with:
           go-version: 1.21
       - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
         with:
           terraform_version: ~1.3
-          terraform_wrapper: false
+          terraform_wrapper: false   
       - name: Download Go Modules
         working-directory: terraform-unit-testing
         run: go mod download
