--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,13 @@ jobs:
       - name: dir
         run: cp terraform-provider-virtualbox ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/virtualbox/1.0.0/linux_amd64
 
+      - uses: actions/setup-go@v1
+        with:
+          go-version: 1.21
+      - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
+        with:
+          terraform_version: ~1.3
+          terraform_wrapper: false   
       - name: Download Go Modules
         working-directory: terraform-unit-testing
         run: go mod download
