--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
           go-version: '1.21.1'
           check-latest: true
 
+      - name: Set up Terraform
+      - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
+        with:
+          terraform_version: ~1.3
+          terraform_wrapper: false
 
       - name: Build
         run: go build -o terraform-provider-virtualbox
@@ -50,28 +55,22 @@ jobs:
       - name: Run golint
         run: golint ./...
 
-      #- name: Run tests
-      #  run: go test -race -vet=off ./internal/provider
+      - name: Run functional tests
+        run: go test -race -vet=off ./internal/provider
 
-      - name: test
-        run: mkdir -p ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/virtualbox/1.0.0/linux_amd64
-      
-      - name: dir
-        run: cp terraform-provider-virtualbox ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/virtualbox/1.0.0/linux_amd64
+      - name: Prepare env
+        run: 
+         - |
+           mkdir -p ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/virtualbox/1.0.0/linux_amd64
+           cp terraform-provider-virtualbox ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/virtualbox/1.0.0/linux_amd64
 
-      - uses: actions/setup-go@v1
-        with:
-          go-version: 1.21
-      - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
-        with:
-          terraform_version: ~1.3
-          terraform_wrapper: false   
       - name: Download Go Modules
         working-directory: terraform-unit-testing
         run: go mod download
-      - name: Run Go Test1
+
+      - name: Run unit tests
         working-directory: terraform-unit-testing
-        run: go test -v vpc_test.go -tags=unit
-      - name: Run Go Test2
-        working-directory: terraform-unit-testing
-        run: go test -v vm_test.go -tags=unit
+        run: 
+        - |
+          go test -v vpc_test.go -tags=unit
+          go test -v vm_test.go -tags=unit
